# DND

./: .env.example  .gitignore  CLAUDE.md  CUsersantonDesktoptick_result.json  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  celerybeat-schedule  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  combat_agent.py  dm_agent.py  event_agent.py  faction_agent.py  memory_architect.py  narrator_agent.py  npc_agent.py  report_agent.py  scenario_agent.py  speech_patterns.py
backend/app/api/: character.py  rooms.py  routes.py  schemas.py  websocket.py  world_builder.py
backend/app/auth/: dependencies.py  jwt.py  routes.py
backend/app/db/: models.py  (+1 more)
backend/finetune/: config.py  schemas.py
backend/tests/: conftest.py  run_tests.py  test_agents_all.py  test_agents_dm.py  test_agents_event.py  test_agents_memory_architect.py  test_agents_narrator.py  test_agents_npc.py  test_agents_report.py  test_api_character.py  test_api_rooms.py  test_api_routes.py  test_api_world_builder.py  test_archetypes.py  test_auth.py  test_auth_routes.py  test_base_agent.py  test_character_model.py  test_combat.py  test_combat_agent.py  test_config.py  test_db_and_graph.py  test_db_postgres.py  test_dnd_classes.py  test_dnd_combat_narrator.py  test_dnd_dice.py  test_dnd_equipment.py  test_dnd_races.py  test_dnd_rules.py  test_economy.py  test_embeddings.py  test_environment.py  test_evolution.py  test_faction_agent.py  test_graph_connection.py  test_graph_queries.py  test_graph_schema.py  test_interactions.py  test_llm.py  test_llm_core.py  (+26 more)
(+180 files in other folders)
