[project]
name = "living-world-engine"
version = "0.1.0"
description = "AI Dungeon Master with living world simulation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "neo4j>=5.20.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "sentence-transformers>=3.0.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.5.0",
    "pydantic>=2.9.0",
    "aiosqlite>=0.20.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
